fixed header spacing issue

--- a/src/styles/utilities/_containers.scss
+++ b/src/styles/utilities/_containers.scss
@@ -1,5 +1,6 @@
 .section-container {
-  padding: 0 30px;
+  padding-right: 30px;
+  padding-left: 30px;
   box-sizing: border-box;
 
   &--spaced {
